--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
             android:theme="@style/Theme.TrainingBikeApp"
             tools:targetApi="31">
         <activity
+                android:name=".BikeActivity"
+                android:exported="false"
+                android:theme="@style/Theme.TrainingBikeApp"/>
+        <activity
                 android:name=".MainActivity"
                 android:exported="true"
                 android:label="@string/app_name"
