--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:theme="@style/Theme.TrainingBikeApp"
             tools:targetApi="31">
         <activity
-                android:name=".BikeActivity"
+                android:name=".JaSportC3Activity"
                 android:exported="false"
                 android:theme="@style/Theme.TrainingBikeApp"/>
         <activity
